--- a/Week02/holygrail.html
+++ b/Week02/holygrail.html
@@ -14,7 +14,7 @@
     <nav>
         <ul>
             <li> 
-                <a href="https://www.amazon.com">Amazon</a> \
+                <a href="https://www.amazon.com">Amazon</a>
             </li>
             <li>
                 <a href="https://www.churchofjesuschrist.org/?lang=eng">The Church of Jesus Christ of Latter Days Saints</a>
