--- a/week02/holygrail.html
+++ b/week02/holygrail.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Robson Paulo da Silva | Holy Grail Layout Example</title>
     <meta name="description" content="A common layout example on the web called the 'holy grail' layout">
-    <meta name="author" content="Robson Paulo da Silva">
+    <meta name="Author" content="Robson Paulo da Silva">
   </head>
   <body>
     <header>
