new file:   images/Brazil_RJ.webp 	new file:   images/Brazil_map.jpeg 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Robson Paulo da Silva | WDD 130</title>
+    <meta name="description" content="My personal profile main page">
+    <meta name="author" content="Robson Paulo da Silva">
     <link rel="stylesheet" href="styles/styles.css">
   </head>
   <body>
@@ -24,6 +26,15 @@
               It has been great to be a part of this church for me and my family.
         </p>
     </main>
+    <aside>
+      <h2>
+        Brazil
+      </h2>
+      <img src="images/Brazil_RJ.webp" alt="Map from Brazil" width="200">
+      <p>O Brasil está localizado na América do Sul e faz fronteiras com todos os países do continente exceto Chile e Equador. 
+        É o maior país do continente e ocupa 47% do território. Situado no hemisfério sul, o país é atravessado pela Linha do 
+        Equador e pelo Trópico de Capricórnio.</p>
+    </aside>
     <footer>
         <p>©2024 👨‍👩‍👧‍👦 Robson Paulo da Silva 👨‍👩‍👧‍👦 Rio de Janeiro, Brasil</p>
     </footer> 
