modified:   index.html

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <h2>
         Brazil
       </h2>
-      <img src="images/Brazil_RJ.webp" alt="Aerial view of the beautiful Brazilian city of Rio de Janeiro" width="200">
+      <img src="/images/Brazil_RJ.webp" alt="Aerial view of the beautiful Brazilian city of Rio de Janeiro" width="200">
       <p>O Brasil está localizado na América do Sul e faz fronteiras com todos os países do continente exceto Chile e Equador. 
         É o maior país do continente e ocupa 47% do território. Situado no hemisfério sul, o país é atravessado pela Linha do 
         Equador e pelo Trópico de Capricórnio.</p>
