modified:   index.html 	modified:   styles/styles.css

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
         Brazil
       </h2>
       <img src="images/brazil_rj.webp" alt="Aerial view of the beautiful Brazilian city of Rio de Janeiro" width="200">
-      <p>O Brasil está localizado na América do Sul e faz fronteiras com todos os países do continente exceto Chile e Equador. 
-        É o maior país do continente e ocupa 47% do território. Situado no hemisfério sul, o país é atravessado pela Linha do 
-        Equador e pelo Trópico de Capricórnio.</p>
+      <p>Brazil is located in South America and shares borders with all countries on the continent except Chile and Ecuador.
+        It is the largest country on the continent and occupies 47% of the territory. Located in the southern hemisphere, the country is crossed by the Line of
+        Ecuador and the Tropic of Capricorn.</p>
     </aside>
     <footer>
         <p>©2024 👨‍👩‍👧‍👦 Robson Paulo da Silva 👨‍👩‍👧‍👦 Rio de Janeiro, Brasil</p>
