--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -13,5 +13,35 @@
             <h1>Rafting Site Plan</h1>
             <div>Robson Paulo da Silva</div>
         </header>
+        <main>
+            <h2>Overview</h2>
+            <h3>Purpose</h3>
+            <p></p>
+            <h2>Branding</h2>
+            <h3>Website logo</h3>
+            <img src="images/logo.png" alt="Rafting Site Logo">
+            <h2>Style Guide</h2>
+            <h3>Color Palette</h3>
+            <p></p>
+            <h3>Typography</h3>
+            <h4>Headings Example Font</h4>
+            <h4>Normal Text/Paragraph Example Font</h4>
+            <p></p>
+            <h3>Navigation</h3>
+            <nav>
+                <a href="#">Home</a>
+                <a href="#">About US</a>
+                <a href="#">Trips</a>
+                <a href="#">Contact US</a>     
+            </nav>
+            <h2>Wireframes</h2>
+            <h3>Home Page Wireframe</h3>
+            <img src="https://byui-cse.github.io/wdd130-ww-course/images/wwr/wwr-wireframe-home.png" alt="Home Page Wireframe Example Design" width="700">
+            <h3>About Us Page Wireframe</h3>
+            <img src="https://byui-cse.github.io/wdd130-ww-course/images/wwr/wwr-wireframe-aboutus-update.png" alt="About Us Page Wireframe Design" width="700">
+        </main>
+        <footer>
+            <p>©2024 👨‍👩‍👧‍👦 Rafting Site Document 👨‍👩‍👧‍👦 Robson Paulo da Silva 👨‍👩‍👧‍👦 WDD130</p>
+        </footer> 
     </body>
 </html>
