modified:   wwr/site-plan-rafting.html

--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -17,7 +17,7 @@
             <h2>Overview</h2>
 
             <h3>Purpose</h3>
-            <p></p> 
+            <p>O Rafting consiste na descida de rios em botes infláveis, onde os integrantes da embarcação remam sob o comando de um instrutor, responsável pela orientação do grupo durante o percurso. Sua prática implica conceitos muito importantes no relacionamento entre as pessoas, como solidariedade, união, liderança, trabalho em equipe e percepção sensorial</p> 
             <h3>Audience</h3>
             <p></p>
 
