new file:   wwr/images/logo.jpg 	modified:   wwr/site-plan-rafting.html

--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -17,9 +17,16 @@
             <h2>Overview</h2>
 
             <h3>Purpose</h3>
-            <p>O Rafting consiste na descida de rios em botes infláveis, onde os integrantes da embarcação remam sob o comando de um instrutor, responsável pela orientação do grupo durante o percurso. Sua prática implica conceitos muito importantes no relacionamento entre as pessoas, como solidariedade, união, liderança, trabalho em equipe e percepção sensorial</p> 
+            <p>Our goal is to help people get to know one of the most beautiful and interesting adventure sports, giving them not only the opportunity to increase their knowledge of the interesting nuances of this sport, but also to be able to enjoy the experience of participating in it, hiring our online services with ease and simplicity.</p> 
             <h3>Audience</h3>
-            <p></p>
+            <p>
+                1- Who are the target customers? Describe their life (or business) situation (age, financial situation, interests, and so on)?
+                Our target audience is people of any age who seek contact with nature, excitement and to develop good friendships. People concerned about safety, who have the support of qualified professionals, who know the most beautiful and vibrant routes, but who above all offer confidence, support and peace of mind.
+                2- What do they want?
+                People who access this site want to know more about what rafting is, find out where this beautiful sport can be practiced and find ways to practice it safely and economically.
+                3- How will my audience usually access my site (desktop, laptop, mobile device)?
+                We intend for our customers to be able to access our website from any device: desktop computers; laptops; tablets and smartphones.
+            </p>
 
             <h2>Branding</h2>
             
