--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -44,11 +44,11 @@
             </p>
             
             <h3>Typography</h3>
-            <h4>Headings Example Font</h4>
+            <h4>Roboto Sans-Serif - Headings Example Font</h4>
             <h4>Roboto Sans-Serif - Normal Text/Paragraph Example Font</h4>
-            <p> Example Text - Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi fugiat nemo quae, quia harum numquam libero odio, soluta beatae, provident natus doloremque. Officia iste cumque nostrum ratione laborum omnis quo!</p>
+            <p>Ubuntu Sans Mono - Example Text - Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi fugiat nemo quae, quia harum numquam libero odio, soluta beatae, provident natus doloremque. Officia iste cumque nostrum ratione laborum omnis quo!</p>
             <h4>Roboto Sans-Serif - Collored Callout Example Font</h4>
-            <p>Example Text - Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum atque maiores asperiores molestiae quod velit enim quos molestias praesentium quae, aperiam eligendi soluta nobis tempora neque repellat ut accusantium. Quisquam?</p>
+            <p>Ubuntu Sans Mono - Example Text - Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum atque maiores asperiores molestiae quod velit enim quos molestias praesentium quae, aperiam eligendi soluta nobis tempora neque repellat ut accusantium. Quisquam?</p>
         
             <h3>Navigation</h3>
             <nav>
