--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -35,12 +35,7 @@
             
             <h2>Style Guide</h2>
             <h3>Color Palette</h3>
-            <p><ul>
-                <li>primary-color: #0f0a0a</li>
-                <li>secondary-color: #f5efed</li>
-                <li>accent1-color: #2292a4</li>
-                <li>accent2-color: #bdbf09</li>
-            </ul>
+            <p>primary-color: #0f0a0a; secondary-color: #f5efed; accent1-color: #2292a4; accent2-color: #bdbf09.
             Palete URL: <a href="https://coolors.co/0f0a0a-f5efed-2292a4-bdbf09-d96c06" target="_blank">https://coolors.co/0f0a0a-f5efed-2292a4-bdbf09-d96c06</a></p>
 
             <h3>Typography</h3>
