--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -43,7 +43,7 @@
                     <li>accent2-color: #bdbf09</li>
                 </ul>
             </p>
-
+            Palete URL: <a href="https://coolors.co/0f0a0a-f5efed-2292a4-bdbf09-d96c06" target="_blank">https://coolors.co/0f0a0a-f5efed-2292a4-bdbf09-d96c06</a>
             <h3>Typography</h3>
             <h4>Roboto Sans-Serif - Headings Example Font</h4>
             <h4>Roboto Sans-Serif - Normal Text/Paragraph Example Font</h4>
