modified:   wwr/site-plan-rafting.html

--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -35,8 +35,7 @@
             
             <h2>Style Guide</h2>
             <h3>Color Palette</h3>
-            <p>
-            <ul>primary-color:#0f0a0a; secondary-color:#f5efed; accent1-color:#2292a4; accent2-color: #bdbf09.</p>
+            <p>primary-color:#0f0a0a; secondary-color:#f5efed; accent1-color:#2292a4; accent2-color: #bdbf09.</p>
             Palete URL: <a href="https://coolors.co/0f0a0a-f5efed-2292a4-bdbf09-d96c06" target="_blank">https://coolors.co/0f0a0a-f5efed-2292a4-bdbf09-d96c06</a>
             <h3>Typography</h3>
             <h4>Roboto Sans-Serif - Headings Example Font</h4>
