--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -39,11 +39,11 @@
             <p>primary-color:#0f0a0a; secondary-color:#f5efed; accent1-color:#2292a4; accent2-color: #bdbf09.Palete URL: <a href="https://coolors.co/0f0a0a-f5efed-2292a4-bdbf09-d96c06" target="_blank">https://coolors.co/0f0a0a-f5efed-2292a4-bdbf09-d96c06</a></p>
             
             <h3>Typography</h3>
-            <h4>Roboto Sans-Serif - Headings Example Font</h4>
-            <h4>Roboto Sans-Serif - Normal Text/Paragraph Example Font</h4>
-            <p>Ubuntu Sans Mono - Example Text - Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi fugiat nemo quae, quia harum numquam libero odio, soluta beatae, provident natus doloremque. Officia iste cumque nostrum ratione laborum omnis quo!</p>
+            <h4>Roboto Sans-Serif Headings Example Font</h4>
+            <h4>Roboto Sans-Serif Normal Text/Paragraph Example Font</h4>
+            <p>Roboto Sans-Serif - Example Text - Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi fugiat nemo quae, quia harum numquam libero odio, soluta beatae, provident natus doloremque. Officia iste cumque nostrum ratione laborum omnis quo!</p>
             <h4>Roboto Sans-Serif - Collored Callout Example Font</h4>
-            <p>Ubuntu Sans Mono - Example Text - Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum atque maiores asperiores molestiae quod velit enim quos molestias praesentium quae, aperiam eligendi soluta nobis tempora neque repellat ut accusantium. Quisquam?</p>
+            <p>Roboto Sans-Serif - Example Text - Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum atque maiores asperiores molestiae quod velit enim quos molestias praesentium quae, aperiam eligendi soluta nobis tempora neque repellat ut accusantium. Quisquam?</p>
         
             <h3>Navigation</h3>
             <nav>
