--- a/week02/wireframe.html
+++ b/week02/wireframe.html
@@ -14,7 +14,7 @@
             <a href="#">Link1</a>
             <a href="#">Link2</a>
             <a href="#">Link3</a>
-            <a href="#">Link4</a>
+            <a href="#"></a>
         </nav> 
     </header>
     <main>
