--- a/week02/wireframe.html
+++ b/week02/wireframe.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Robson Paulo da Silva | Wireframe</title>
+    <title>Wireframe</title>
     <meta name="description" content="Wireframe">
     <meta name="author" content="Robson Paulo da Silva">
+    <link rel="stylesheet" href="styles/wireframe.css">
   </head>
   <body>
     <header> 
-        <img src="" alt=""> 
+        <img class="logo" src="images/logo.jpg" alt="Logo Chocolates"> 
         <nav>
             <a href="#">Link1</a>
             <a href="#">Link2</a>
@@ -18,7 +19,55 @@
         </nav> 
     </header>
     <main>
-        
+        <section  class="banner">
+            <section>
+                <img src="images/nature_1.jpg" alt="Nature 1">
+                <h1>Imagem1</h1>
+                <p>Description Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores ipsam laboriosam nobis reprehenderit doloribus voluptate magni eveniet ratione? Voluptates adipisci magnam fugit amet ducimus exercitationem assumenda officia similique corporis consectetur?</p>
+            </section>
+            <section>
+                <img src="images/nature_2.jpg" alt="Nature 2">
+                <h1>Imagem2</h1>
+                <p>Description Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur sunt nostrum nemo placeat, voluptas quos consequatur in, atque ratione libero corrupti recusandae rerum corporis adipisci necessitatibus assumenda tempora facilis aliquid.</p>
+            </section>
+            <section>
+                <img src="images/nature_3.jpg" alt="Nature 3">
+                <h1>Imagem3</h1>
+                <p>Description Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus error accusamus tempora iure, cupiditate voluptas eius dicta dolor similique, quae quaerat quo minus neque perspiciatis eveniet ipsum qui pariatur unde!</p>
+            </section>
+        </section>
+        <section class="product_galery">
+            <section>
+                <img src="images/product_1.jpg" alt="Product 1">
+                <h1>Product 1</h1>
+                <p>Description Lorem ipsum dolor sit.</p>
+            </section>
+            <section>
+                <img src="images/product_2.jpg" alt="Product 2">
+                <h1>Product 2</h1>
+                <p>Description Lorem ipsum dolor sit amet.</p>
+            </section>
+            <section>
+                <img src="images/product_3.jpg" alt="Product 3">
+                <h1>Product 3</h1>
+                <p>Description Lorem ipsum dolor sit amet consectetur.</p>
+            </section>
+            <section>
+                <img src="images/product_4.jpg" alt="Product 4">
+                <h1>Product 4</h1>
+                <p>Description Lorem ipsum dolor sit amet consectetur.</p>
+            </section>
+            <section>
+                <img src="images/product_5.jpg" alt="Product 5">
+                <h1>Product 5</h1>
+                <p>Description Lorem ipsum dolor sit amet consectetur.</p>
+            </section>
+            <section>
+                <img src="images/product_6.jpg" alt="Product 6">
+                <h1>Product 6</h1>
+                <p>Description Lorem ipsum dolor sit amet consectetur.</p>
+            </section>
+        </section>
     </main>
     <footer>
     </footer> 
