modified:   index.html 	modified:   styles/styles.css

--- a/index.html
+++ b/index.html
@@ -14,19 +14,26 @@
             <a href="#">Home</a>
             <a href="wwr/">Rafting Website</a>
             <a href="wwr/site-plan-rafting.html">Rafting Site Plan</a>
+            <a href="https://linkedin.com">LinkedIn</a>
+            <a href="https://facebook.com">Facebook</a>
         </nav>
     </header>
     <main>
         <h1>Robson Paulo da Silva | WDD 130</h1>
         <img src="images/profile.jpg" alt="Hello, my name is Robson Paulo da Silva" width="200">
-            <p>Hello! My name is Robson Paulo da Silva. I'm Brazilian and I live in the city of Rio de Janeiro.
+        <p>Hello! My name is Robson Paulo da Silva. I'm Brazilian and I live in the city of Rio de Janeiro.
               I like hiking in this city full of interesting options, close to forests and beaches.
               I also like walking, cinema, theater, circus, beach and reading good books.
               I am a member of the Church of Jesus Christ of Latter-day Saints and am grateful for the way
               It has been great to be a part of this church for me and my family.
         </p>
+        <ul class="box">
+          <li><a href="https://www.churchofjesuschrist.org/temples/details/rio-de-janeiro-brazil-temple?lang=por" target="_blank">Rio de Janeiro</a></li>
+          <li><a href="https://www.churchofjesuschrist.org/temples/details/recife-brazil-temple?lang=por" target="_blank">Recife</a></li>
+          <li><a href="https://www.churchofjesuschrist.org/temples/details/sao-paulo-brazil-temple?lang=por" target="blank">São Paulo</a></li>
+        </ul>
     </main>
-    <aside>
+    <aside class="box">
       <h2>
         Brazil
       </h2>
@@ -39,4 +46,5 @@
         <p>©2024 👨‍👩‍👧‍👦 Robson Paulo da Silva 👨‍👩‍👧‍👦 Rio de Janeiro, Brasil</p>
     </footer> 
   </body>
+<!-- Last modified in 05/07/2024 -->
 </html>
