--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <h2>
         Brazil
       </h2>
-      <img src="images/Brazil_map.jpeg" alt="Aerial view of the beautiful Brazilian city of Rio de Janeiro" width="200">
+      <img src="images/Brazil_RJ.webp" alt="Aerial view of the beautiful Brazilian city of Rio de Janeiro" width="200">
       <p>Brazil is located in South America and shares borders with all countries on the continent except Chile and Ecuador.
         It is the largest country on the continent and occupies 47% of the territory. Located in the southern hemisphere, the country is crossed by the Line of
         Ecuador and the Tropic of Capricorn.</p>
