--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </nav>
     </header>
     <main>
-        <h1>Robson Paulo da Silva | WDD 130</h1>
+        <h1>Robson Paulo da Silva 1 | WDD 130</h1>
         <img src="/images/Profile.jpg" alt="Hello, my name is Robson Paulo da Silva" width="200">
         <p>Hello! My name is Robson Paulo da Silva. I'm Brazilian and I live in the city of Rio de Janeiro.
               I like hiking in this city full of interesting options, close to forests and beaches.
