modified:   index.html

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         </nav>
     </header>
     <main>
-        <h1>Robson Paulo da Silva 6  | WDD 130</h1>
-        <img src="images/profile.jpg" alt="Hello, my name is Robson Paulo da Silva" width="200">
+        <h1>Robson Paulo da Silva 7  | WDD 130</h1>
+        <img src="/images/profile.jpg" alt="Hello, my name is Robson Paulo da Silva" width="200">
         <p>Hello! My name is Robson Paulo da Silva. I'm Brazilian and I live in the city of Rio de Janeiro.
               I like hiking in this city full of interesting options, close to forests and beaches.
               I also like walking, cinema, theater, circus, beach and reading good books.
@@ -37,7 +37,7 @@
       <h2>
         Brazil
       </h2>
-      <img src="images/Brazil_RJ_1.bmp" alt="Aerial view of the beautiful Brazilian city of Rio de Janeiro" width="200">
+      <img src="images/Brazil_RJ.webp" alt="Aerial view of the beautiful Brazilian city of Rio de Janeiro" width="200">
       <p>Brazil is located in South America and shares borders with all countries on the continent except Chile and Ecuador.
         It is the largest country on the continent and occupies 47% of the territory. Located in the southern hemisphere, the country is crossed by the Line of
         Ecuador and the Tropic of Capricorn.</p>
