--- a/wwr/about.html
+++ b/wwr/about.html
@@ -6,13 +6,13 @@
     <title>About Us</title>
     <meta name="description" content="Find out more about who we are, our contacts, address, among others.">
     <meta name="author" content="Robson Paulo da Silva">
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/rafting.css">
 </head>
 <body>
     <header>
         <img src="images/logo.jpg" alt="Company Logo">
         <nav>
-            <a href="index.html">Index</a>
+            <a href="index.html">Home</a>
             <a href="about.html">About</a>
             <a href="trips.html">Trips</a>
             <a href="contact.html">Contact</a>
