modified:   wwr/about.html 	modified:   wwr/styles/rafting.css

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -23,7 +23,7 @@
             <img src="images/hero.jpg" alt="Hero">
             <h1>Rafting Travel</h1>
             <article>
-                <img src="images/happy_client.jpg" alt="">
+                <img src="images/happy_client.jpg" alt="Happy client" id="client">
                 <p>Rafting Travel an adventure company. <b>Our purpose</b> is to offer our clients safe rafting trips, 
                     in stunning places, with the best quality equipment and support from experienced and highly 
                     trained professionals.Our mission is to offer our customers close contact with nature, 
