modified:   wwr/about.html 	modified:   wwr/images/wwr_image3.jpg 	modified:   wwr/images/wwr_image5.jpg 	modified:   wwr/styles/rafting.css

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -43,10 +43,15 @@
         <section>
             <h2>Adventure Awaits You!</h2>
             <img src="images/wwr_image1.jpg" alt="Image 1">
+            <figcaption>Peaceful Rapidis</figcaption>
             <img src="images/wwr_image2.jpg" alt="Image 2">
+            <figcaption>Colorado River</figcaption>
             <img src="images/wwr_image3.jpg" alt="Image 3">
+            <figcaption>Pastaza River</figcaption>
             <img src="images/wwr_image4.jpg" alt="Image 4">
+            <figcaption>Smokey River</figcaption>
             <img src="images/wwr_image5.jpg" alt="Image 5">
+            <figcaption>Arkansas River</figcaption>
         </section>
     </main>
     <footer>
