modified:   wwr/about.html 	modified:   wwr/styles/rafting.css

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -40,22 +40,22 @@
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus laudantium explicabo ex nemo quam adipisci iure, voluptatibus repudiandae minima unde numquam sunt voluptatem. Deserunt architecto modi nostrum iusto, fugiat quisquam!
             </p>
         </section>
-        <section>
+        <section class ="rafting-images">
             <h2>Adventure Awaits You!</h2>
-            <img src="images/wwr_image1.jpg" alt="Image 1">
-            <figcaption>Peaceful Rapidis</figcaption>
-            <img src="images/wwr_image2.jpg" alt="Image 2">
+            <img src="images/wwr_image1.jpg" alt="Rafting in Peaceful Rapids">
+            <figcaption>Peaceful Rapids</figcaption>
+            <img src="images/wwr_image2.jpg" alt="Rafting in Colorado River">
             <figcaption>Colorado River</figcaption>
-            <img src="images/wwr_image3.jpg" alt="Image 3">
+            <img src="images/wwr_image3.jpg" alt="Rafting in Pastaza River">
             <figcaption>Pastaza River</figcaption>
-            <img src="images/wwr_image4.jpg" alt="Image 4">
+            <img src="images/wwr_image4.jpg" alt="Rafting in Smokey River">
             <figcaption>Smokey River</figcaption>
-            <img src="images/wwr_image5.jpg" alt="Image 5">
+            <img src="images/wwr_image5.jpg" alt="Rafting in Arkansas River">
             <figcaption>Arkansas River</figcaption>
         </section>
     </main>
     <footer>
-        <p>©2024 👨‍👩‍👧‍👦 Rafting Travel 👨‍👩‍👧‍👦 Robson Paulo da Silva</p>
+        <p>©2024 ⚓ Rafting Travel ⚓ Robson Paulo da Silva</p>
         <nav>
             <a href="https://facebook.com"><img src="images/facebook_icon.webp" alt="Facebook"></a>
             <a href="htpps://twitter.com"><img src="images/twitter_icon.webp" alt="Twitter"></a>
