modified:   wwr/about.html

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <img src="images/logo.jpg" alt="Company Logo">
+        <img src="images/logo.jpg" alt="Rafting Travel Company Logo">
         <nav>
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
