modified:   wwr/about.html

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -42,8 +42,10 @@
         </section>
         <section class ="rafting-images">
             <h2>Adventure Awaits You!</h2>
-            <img src="images/wwr_image1.jpg" alt="Rafting in Peaceful Rapids">
-            <figcaption>Peaceful Rapids</figcaption>
+            <figure>
+                <img src="images/wwr_image1.jpg" alt="Rafting in Peaceful Rapids">
+                <figcaption>Peaceful Rapids</figcaption>
+            </figure>
             <img src="images/wwr_image2.jpg" alt="Rafting in Colorado River">
             <figcaption>Colorado River</figcaption>
             <img src="images/wwr_image3.jpg" alt="Rafting in Pastaza River">
