modified:   wwr/about.html

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -46,14 +46,22 @@
                 <img src="images/wwr_image1.jpg" alt="Rafting in Peaceful Rapids">
                 <figcaption>Peaceful Rapids</figcaption>
             </figure>
-            <img src="images/wwr_image2.jpg" alt="Rafting in Colorado River">
-            <figcaption>Colorado River</figcaption>
-            <img src="images/wwr_image3.jpg" alt="Rafting in Pastaza River">
-            <figcaption>Pastaza River</figcaption>
-            <img src="images/wwr_image4.jpg" alt="Rafting in Smokey River">
-            <figcaption>Smokey River</figcaption>
-            <img src="images/wwr_image5.jpg" alt="Rafting in Arkansas River">
-            <figcaption>Arkansas River</figcaption>
+            <figure>
+                <img src="images/wwr_image2.jpg" alt="Rafting in Colorado River">
+                <figcaption>Colorado River</figcaption>
+            </figure>
+            <figure>
+                <img src="images/wwr_image3.jpg" alt="Rafting in Pastaza River">
+                <figcaption>Pastaza River</figcaption>
+            </figure>
+            <figure>
+                <img src="images/wwr_image4.jpg" alt="Rafting in Smokey River">
+                <figcaption>Smokey River</figcaption>
+            </figure>
+            <figure>
+                <img src="images/wwr_image5.jpg" alt="Rafting in Arkansas River">
+                <figcaption>Arkansas River</figcaption>
+            </figure>   
         </section>
     </main>
     <footer>
