modified:   wwr/about.html

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -42,6 +42,11 @@
         </section>
         <section class ="rafting-images">
             <h2>Adventure Awaits You!</h2>
+            <!-- 
+                I used the <figure> tag to group the images and eliminate a 
+                validation error that said that the section container did not 
+                allow having an img tag directly inside it.
+             -->
             <figure>
                 <img src="images/wwr_image1.jpg" alt="Rafting in Peaceful Rapids">
                 <figcaption>Peaceful Rapids</figcaption>
