modified:   wwr/about.html

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -50,7 +50,8 @@
             <figure>
                 <img src="images/wwr_image1.jpg" alt="Rafting in Peaceful Rapids">
                 <figcaption>Peaceful Rapids</figcaption>
-                
+             </figure>
+             <figure>   
                 <img src="images/wwr_image2.jpg" alt="Rafting in Colorado River">
                 <figcaption>Colorado River</figcaption>
                 
