modified:   wwr/about.html

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -47,6 +47,7 @@
                 validation error that said that the section container did not 
                 allow having an img tag directly inside it.
              -->
+             <!-- I added the <figcaption> tag to associate titles with images -->
             <figure>
                 <img src="images/wwr_image1.jpg" alt="Rafting in Peaceful Rapids">
                 <figcaption>Peaceful Rapids</figcaption>
