modified:   wwr/about.html

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -33,9 +33,7 @@
             </article>
         </div>
         <section>
-            <h2>
-                History
-            </h2>
+            <h2>History</h2>
             <p>
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus laudantium explicabo ex nemo quam adipisci iure, voluptatibus repudiandae minima unde numquam sunt voluptatem. Deserunt architecto modi nostrum iusto, fugiat quisquam!
             </p>
