--- a/wwr/about.html
+++ b/wwr/about.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
+    <!-- Including default tags -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us</title>
     <meta name="description" content="Find out more about who we are, our contacts, address, among others.">
     <meta name="author" content="Robson Paulo da Silva">
+
+    <!-- Including Style Sheet -->
     <link rel="stylesheet" href="styles/rafting.css">
+
+    <!-- Including Patrick Hand SC Static -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand+SC&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
