modified:   wwr/about.html 	modified:   wwr/styles/rafting.css

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -80,9 +80,9 @@
             </figure>   
         </section>
     </main>
-    <footer>
-        <p>©2024 ⚓ Rafting Travel ⚓ Robson Paulo da Silva</p>
-        <nav>
+    <footer class="footer">
+        <p class="paragraph-footer">©2024 ⚓ Rafting Travel ⚓ Robson Paulo da Silva</p>
+        <nav class="footer-nav">
             <a href="https://facebook.com"><img src="images/facebook_icon.webp" alt="Facebook"></a>
             <a href="htpps://twitter.com"><img src="images/twitter_icon.webp" alt="Twitter"></a>
             <a href="https://instagram.com"><img src="images/instagram_icon.webp" alt="Instagram"></a>
