modified:   index.html 	modified:   styles/styles.css

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- Adding a html comment -->
 <!doctype html>
 <html lang="en-US"> 
   <head>
@@ -20,13 +21,14 @@
     </header>
     <main>
         <h1>Robson Paulo da Silva 7  | WDD 130</h1>
-        <img src="images/profile.jpg" alt="Hello, my name is Robson Paulo da Silva" width="200">
+        <img src="images/profile.jpg" alt="Hello, my name is Robson Paulo da Silva">
         <p>Hello! My name is Robson Paulo da Silva. I'm Brazilian and I live in the city of Rio de Janeiro.
               I like hiking in this city full of interesting options, close to forests and beaches.
               I also like walking, cinema, theater, circus, beach and reading good books.
               I am a member of the Church of Jesus Christ of Latter-day Saints and am grateful for the way
               It has been great to be a part of this church for me and my family.
         </p>
+        <!-- ul list added with 3 itens -->
         <ul class="box">
           <li><a href="https://www.churchofjesuschrist.org/temples/details/rio-de-janeiro-brazil-temple?lang=por" target="_blank">Rio de Janeiro</a></li>
           <li><a href="https://www.churchofjesuschrist.org/temples/details/recife-brazil-temple?lang=por" target="_blank">Recife</a></li>
