modified:   index.html 	modified:   styles/styles.css

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               It has been great to be a part of this church for me and my family.
         </p>
         <!-- ul list added with 3 itens -->
-        <ul class="box">
+        <ul class="box box-ul">
           <li><a href="https://www.churchofjesuschrist.org/temples/details/rio-de-janeiro-brazil-temple?lang=por" target="_blank">Rio de Janeiro</a></li>
           <li><a href="https://www.churchofjesuschrist.org/temples/details/recife-brazil-temple?lang=por" target="_blank">Recife</a></li>
           <li><a href="https://www.churchofjesuschrist.org/temples/details/sao-paulo-brazil-temple?lang=por" target="blank">São Paulo</a></li>
