--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Robson Paulo da Silva | WDD 130</title>
-    <meta name="description" content="My personal profile main page">
+    <meta name="description" content="This page contains interesting personal profiles such as my name, nationality and city where I live.">
     <meta name="author" content="Robson Paulo da Silva">
     <link rel="stylesheet" href="styles/styles.css">
   </head>
