--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </nav>
     </header>
     <main>
-        <h1>Robson Paulo da Silva 7  | WDD 130</h1>
+        <h1>Robson Paulo da Silva | WDD 130</h1>
         <img src="images/profile.jpg" alt="Hello, my name is Robson Paulo da Silva">
         <p>Hello! My name is Robson Paulo da Silva. I'm Brazilian and I live in the city of Rio de Janeiro.
               I like hiking in this city full of interesting options, close to forests and beaches.
