modified:   week04/lesson2/index.html 	new file:   week04/lesson2/styles/styles.css

--- a/week04/lesson2/index.html
+++ b/week04/lesson2/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Flexbox 0 — starting code</title>
+    <link rel="stylesheet" href="styles/styles.css">
     <style>
       html {
         font-family: sans-serif;
@@ -42,7 +43,7 @@
       <h1>Sample flexbox example</h1>
     </header>
 
-    <section>
+    <section    >
       <article>
         <h2>First article</h2>
 
