--- a/index.html
+++ b/index.html
@@ -19,31 +19,33 @@
             <a href="https://facebook.com">Facebook</a>
         </nav>
     </header>
-    <main>
-        <h1>Robson Paulo da Silva | WDD 130</h1>
-        <img src="images/profile.jpg" alt="Hello, my name is Robson Paulo da Silva">
-        <p>Hello! My name is Robson Paulo da Silva. I'm Brazilian and I live in the city of Rio de Janeiro.
-              I like hiking in this city full of interesting options, close to forests and beaches.
-              I also like walking, cinema, theater, circus, beach and reading good books.
-              I am a member of the Church of Jesus Christ of Latter-day Saints and am grateful for the way
-              It has been great to be a part of this church for me and my family.
-        </p>
-        <!-- ul list added with 3 itens -->
-        <ul class="box box-ul">
-          <li><a href="https://www.churchofjesuschrist.org/temples/details/rio-de-janeiro-brazil-temple?lang=por" target="_blank">Rio de Janeiro</a></li>
-          <li><a href="https://www.churchofjesuschrist.org/temples/details/recife-brazil-temple?lang=por" target="_blank">Recife</a></li>
-          <li><a href="https://www.churchofjesuschrist.org/temples/details/sao-paulo-brazil-temple?lang=por" target="blank">São Paulo</a></li>
-        </ul>
-    </main>
-    <aside class="box">
-      <h2>
-        Brazil
-      </h2>
-      <img src="images/Brazil_RJ.webp" alt="Aerial view of the beautiful Brazilian city of Rio de Janeiro" width="200">
-      <p>Brazil is located in South America and shares borders with all countries on the continent except Chile and Ecuador.
-        It is the largest country on the continent and occupies 47% of the territory. Located in the southern hemisphere, the country is crossed by the Line of
-        Ecuador and the Tropic of Capricorn.</p>
-    </aside>
+    <div class="grid">
+      <main>
+          <h1>Robson Paulo da Silva | WDD 130</h1>
+          <img src="images/profile.jpg" alt="Hello, my name is Robson Paulo da Silva">
+          <p>Hello! My name is Robson Paulo da Silva. I'm Brazilian and I live in the city of Rio de Janeiro.
+                I like hiking in this city full of interesting options, close to forests and beaches.
+                I also like walking, cinema, theater, circus, beach and reading good books.
+                I am a member of the Church of Jesus Christ of Latter-day Saints and am grateful for the way
+                It has been great to be a part of this church for me and my family.
+          </p>
+          <!-- ul list added with 3 itens -->
+          <ul class="box box-ul">
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/rio-de-janeiro-brazil-temple?lang=por" target="_blank">Rio de Janeiro Temple</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/recife-brazil-temple?lang=por" target="_blank">Recife Temple</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/sao-paulo-brazil-temple?lang=por" target="blank">São Paulo Temple</a></li>
+          </ul>
+      </main>
+      <aside class="box">
+        <h2>
+          Brazil
+        </h2>
+        <img src="images/Brazil_RJ.webp" alt="Aerial view of the beautiful Brazilian city of Rio de Janeiro" width="200">
+        <p>Brazil is located in South America and shares borders with all countries on the continent except Chile and Ecuador.
+          It is the largest country on the continent and occupies 47% of the territory. Located in the southern hemisphere, the country is crossed by the Line of
+          Ecuador and the Tropic of Capricorn.</p>
+      </aside>
+    </div>
     <footer>
         <p>©2024 👨‍👩‍👧‍👦 Robson Paulo da Silva 👨‍👩‍👧‍👦 Rio de Janeiro, Brasil</p>
     </footer> 
