modified:   week05/poll-form.html 	new file:   week05/styles/poll-form.css

--- a/week05/poll-form.html
+++ b/week05/poll-form.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WDD 130 | HTML Form - User Poll</title>
+    <link rel="stylesheet" href="styles/poll-form.css">
 </head>
 <body>
     <header>
@@ -29,7 +30,7 @@
                     <option value="Edge">Edge</option>
                     <option value="Safari">Safari</option>
                 </select><br>
-                <label for="pet">Do you have a household pet</label>
+                <label for="pet">Do you have a household pet?</label>
                 <input type="checkbox" id="pet" name="pet"><label for="Pet">Pet</label><br>
                 <label for="places">List the places you have lived:</label>
                 <textarea name="places" id="places" rows="4" placeholder="Places you have lived"></textarea>
