--- a/week05/poll-form.html
+++ b/week05/poll-form.html
@@ -16,10 +16,10 @@
         <form action="">
             <fieldset>
                 <legend>Contact Information</legend>
-                <label for="fullname">Full name</label><br>
-                <input type="text" id="fullname" name="fullname"><br>
-                <label for="useremail">User email</label><br>
-                <input type="email" id="useremail" name="useremail"><br>
+                <label for="fullname">Full name</label>
+                <input type="text" id="fullname" name="fullname">
+                <label for="useremail">User email</label>
+                <input type="email" id="useremail" name="useremail">
             </fieldset>
             <fieldset>
                 <legend>Questions</legend>
@@ -31,7 +31,7 @@
                     <option value="Safari">Safari</option>
                 </select><br>
                 <label for="pet">Do you have a household pet?</label>
-                <input type="checkbox" id="pet" name="pet"><label for="Pet">Pet</label><br>
+                <input type="checkbox" id="pet" name="pet">
                 <label for="places">List the places you have lived:</label>
                 <textarea name="places" id="places" rows="4" placeholder="Places you have lived"></textarea>
             </fieldset>
