--- a/week05/poll-form.html
+++ b/week05/poll-form.html
@@ -16,24 +16,34 @@
         <form action="">
             <fieldset>
                 <legend>Contact Information</legend>
-                <label for="fullname">Full name</label>
-                <input type="text" id="fullname" name="fullname">
-                <label for="useremail">User email</label>
-                <input type="email" id="useremail" name="useremail">
+                <div>
+                    <label for="fullname" class="form-item">Full name</label>
+                    <input type="text" id="fullname" name="fullname">
+                </div>
+                <div>
+                    <label for="useremail">User email</label>
+                    <input type="email" id="useremail" name="useremail">
+                </div>
             </fieldset>
             <fieldset>
                 <legend>Questions</legend>
-                <label for="browser">What is your favorite browser?</label>
-                <select name="browser" id="browser">
-                    <option value="Firefox">Firefox</option>
-                    <option value="Chrome">Chrome</option>
-                    <option value="Edge">Edge</option>
-                    <option value="Safari">Safari</option>
-                </select><br>
-                <label for="pet">Do you have a household pet?</label>
-                <input type="checkbox" id="pet" name="pet">
-                <label for="places">List the places you have lived:</label>
-                <textarea name="places" id="places" rows="4" placeholder="Places you have lived"></textarea>
+                <div class="column1">
+                    <label for="browser">What is your favorite browser?</label>
+                    <select name="browser" id="browser">
+                        <option value="Firefox">Firefox</option>
+                        <option value="Chrome">Chrome</option>
+                        <option value="Edge">Edge</option>
+                        <option value="Safari">Safari</option>
+                    </select>
+                </div>
+                <div>
+                    <label for="pet">Do you have a household pet?</label>
+                    <input type="checkbox" id="pet" name="pet">
+                </div>
+                <div>
+                    <label for="places">List the places you have lived:</label>
+                    <textarea name="places" id="places" rows="4" placeholder="Places you have lived"></textarea>
+                </div> 
             </fieldset>
             <button title="submit">Submit Poll</button>
         </form>
