--- a/week05/poll-form.html
+++ b/week05/poll-form.html
@@ -16,18 +16,18 @@
         <form action="">
             <fieldset>
                 <legend>Contact Information</legend>
-                <div>
-                    <label for="fullname" class="form-item">Full name</label>
+                <div class="form-item column2">
+                    <label for="fullname">Full name</label>
                     <input type="text" id="fullname" name="fullname">
                 </div>
-                <div>
-                    <label for="useremail">User email</label>
+                <div class="form-item column2">
+                    <label for="useremail" class="form-item">User email</label>
                     <input type="email" id="useremail" name="useremail">
                 </div>
             </fieldset>
             <fieldset>
                 <legend>Questions</legend>
-                <div class="column1">
+                <div class="form-item column1">
                     <label for="browser">What is your favorite browser?</label>
                     <select name="browser" id="browser">
                         <option value="Firefox">Firefox</option>
@@ -36,14 +36,12 @@
                         <option value="Safari">Safari</option>
                     </select>
                 </div>
-                <div>
+                <div class="form-item column1">
                     <label for="pet">Do you have a household pet?</label>
                     <input type="checkbox" id="pet" name="pet">
-                </div>
-                <div>
-                    <label for="places">List the places you have lived:</label>
-                    <textarea name="places" id="places" rows="4" placeholder="Places you have lived"></textarea>
-                </div> 
+                </div>    
+                <label for="places">List the places you have lived:</label>
+                <textarea name="places" id="places" rows="4" placeholder="Places you have lived"></textarea> 
             </fieldset>
             <button title="submit">Submit Poll</button>
         </form>
