--- a/week05/poll-form.html
+++ b/week05/poll-form.html
@@ -18,11 +18,11 @@
                 <legend>Contact Information</legend>
                 <div class="form-item column2">
                     <label for="fullname">Full name</label>
-                    <input type="text" id="fullname" name="fullname">
+                    <input type="text" id="fullname" name="fullname" placeholder="Full name">
                 </div>
                 <div class="form-item column2">
                     <label for="useremail" class="form-item">User email</label>
-                    <input type="email" id="useremail" name="useremail">
+                    <input type="email" id="useremail" name="useremail" placeholder="User email">
                 </div>
             </fieldset>
             <fieldset>
@@ -40,7 +40,7 @@
                     <label for="pet">Do you have a household pet?</label>
                     <input type="checkbox" id="pet" name="pet">
                 </div>    
-                <label for="places">List the places you have lived:</label>
+                <label for="places">List the places you have lived</label>
                 <textarea name="places" id="places" rows="4" placeholder="Places you have lived"></textarea> 
             </fieldset>
             <button title="submit">Submit Poll</button>
