modified:   week05/poll-form.html

--- a/week05/poll-form.html
+++ b/week05/poll-form.html
@@ -13,7 +13,7 @@
         </h1>
     </header>
     <main>
-        <form action="">
+        <form>
             <fieldset>
                 <legend>Contact Information</legend>
                 <div class="form-item column2">
