modified:   wwr/quiz.html 	modified:   wwr/styles/quiz.css

--- a/wwr/quiz.html
+++ b/wwr/quiz.html
@@ -6,7 +6,7 @@
     <title>Robson Paulo da Silva | WDD 130 | Quiz</title>
     <meta name="description" content="This page contains interesting personal profiles such as my name, nationality and city where I live.">
     <meta name="author" content="Robson Paulo da Silva">
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/quiz.css">
 
 </head>
 <body>
@@ -64,7 +64,7 @@
                     <input type="text" name="q6" id="q6">
                 </div>
             </fieldset>
-
+            <button type="submit">Submit Quiz</button>
         </form>
     </body>
     <footer>
