--- a/wwr/quiz.html
+++ b/wwr/quiz.html
@@ -17,15 +17,15 @@
         <form action="">
             <fieldset>
                 <legend>Basic HTML questions</legend>
-                <div>
+                <div class="form-item">
                     <label for="q1"><b>1.</b>What is the purpose of the HTML <!DOCTYPE html> tag?</label>
                     <input type="text" name="q1" id="q1">
                 </div>
-                <div>
+                <div class="form-item">
                     <label for="q2"><b>2.</b>Describe the basic structure of an HTML page</label>
                     <textarea name="q2" id="q2" rows="5"></textarea>
                 </div>
-                <div>
+                <div class="form-item">
                     <label for="q3"><b>3.</b>What is the first tag that an HTML document should contain?</label>
                     <select name="q3" id="q3">
                         <option value="h1">&lt;h1&gt;</option>
@@ -35,14 +35,14 @@
                         <option value="title">&lt;title&gt;</option>
                     </select>
                 </div>
-                <div>
+                <div class="form-item">
                     <label for="q4"><b>4.</b>What is the padding width given in this statement?</label>
                     <input type="number" name="q4" id="q4">
                 </div>
             </fieldset>
             <fieldset>
                 <legend>Basic CSS questions</legend>
-                <div>
+                <div class="form-item column1">
                     <label for="q5"><b>5.</b>How do you add a comment in a CSS file?</label>
                     
                     
@@ -59,7 +59,7 @@
                     <label for="option">&lt;!-- this is a comment--&gt;</label>
 
                 </div>
-                <div>
+                <div class="form-item">
                     <label for="q6"><b>6.</b>What does the acronym CSS stand for?</label>
                     <input type="text" name="q6" id="q6">
                 </div>
