--- a/wwr/quiz.html
+++ b/wwr/quiz.html
@@ -45,22 +45,12 @@
                     <legend>Basic CSS questions</legend>
                     <div class="form-item column1">
                         <label for="q5"><b>5.</b>How do you add a comment in a CSS file?</label>
-                        
-                        
-                        <input type="radio" id="option1" name="q5" value="option1">
-                        <label for="option1">/* this is a comment */</label>
-
-                        <input type="radio" id="option2" name="q5" value="option2">
-                        <label for="option2">// this is a comment //</label>
-
-                        <input type="radio" id="option3" name="q5" value="option3">
-                        <label for="option3">// this is a comment</label>
-
-                        <input type="radio" id="option4" name="q5" value="option4">
-                        <label for="option">&lt;!-- this is a comment--&gt;</label>
-
+                        <label for="option1" class="inputlabel"><input type="radio" id="option1" name="q5" value="option1">  /* this is a comment */</label>
+                        <label for="option2" class="inputlabel"><input type="radio" id="option2" name="q5" value="option2"> // this is a comment //</label>
+                        <label for="option3" class="inputlabel"><input type="radio" id="option3" name="q5" value="option3">  // this is a comment</label>
+                        <label for="option" class="inputlabel"><input type="radio" id="option4" name="q5" value="option4"> &lt;!-- this is a comment--&gt;</label>
                     </div>
-                    <div class="form-item">
+                    <div class="form-item column1">
                         <label for="q6"><b>6.</b>What does the acronym CSS stand for?</label>
                         <input type="text" name="q6" id="q6">
                     </div>
