--- a/quiz.html
+++ b/quiz.html
@@ -15,7 +15,7 @@
     </header>
     <body>
         <div class="bodydiv">
-            <form action="">
+            <form>
                 <fieldset>
                     <legend>Basic HTML questions</legend>
                     <div class="form-item">
@@ -48,7 +48,7 @@
                         <label for="option1" class="inputlabel"><input type="radio" id="option1" name="q5" value="option1">  /* this is a comment */</label>
                         <label for="option2" class="inputlabel"><input type="radio" id="option2" name="q5" value="option2"> // this is a comment //</label>
                         <label for="option3" class="inputlabel"><input type="radio" id="option3" name="q5" value="option3">  // this is a comment</label>
-                        <label for="option" class="inputlabel"><input type="radio" id="option4" name="q5" value="option4"> &lt;!-- this is a comment--&gt;</label>
+                        <label for="option4" class="inputlabel"><input type="radio" id="option4" name="q5" value="option4"> &lt;!-- this is a comment--&gt;</label>
                     </div>
                     <div class="form-item column1">
                         <label for="q6"><b>6.</b>What does the acronym CSS stand for?</label>
