modified:   quiz.html

--- a/quiz.html
+++ b/quiz.html
@@ -13,13 +13,13 @@
     <header>
         <h1>HTML and CSS Quiz</h1>
     </header>
-    <body>
+    <main>
         <div class="bodydiv">
             <form>
                 <fieldset>
                     <legend>Basic HTML questions</legend>
                     <div class="form-item">
-                        <label for="q1"><b>1.</b>What is the purpose of the HTML <!DOCTYPE html> tag?</label>
+                        <label for="q1"><b>1.</b>What is the purpose of the HTML &lt;!DOCTYPE html&gt; tag?</label>
                         <input type="text" name="q1" id="q1">
                     </div>
                     <div class="form-item">
@@ -29,6 +29,7 @@
                     <div class="form-item">
                         <label for="q3"><b>3.</b>What is the first tag that an HTML document should contain?</label>
                         <select name="q3" id="q3">
+                            <option value="" selected disabled >Choose One</option>
                             <option value="h1">&lt;h1&gt;</option>
                             <option value="html">&lt;html&gt;</option>
                             <option value="head">&lt;head&gt;</option>
@@ -44,7 +45,7 @@
                 <fieldset>
                     <legend>Basic CSS questions</legend>
                     <div class="form-item column1">
-                        <label for="q5"><b>5.</b>How do you add a comment in a CSS file?</label>
+                        <label for="option1"><b>5.</b>How do you add a comment in a CSS file?</label>
                         <label for="option1" class="inputlabel"><input type="radio" id="option1" name="q5" value="option1">  /* this is a comment */</label>
                         <label for="option2" class="inputlabel"><input type="radio" id="option2" name="q5" value="option2"> // this is a comment //</label>
                         <label for="option3" class="inputlabel"><input type="radio" id="option3" name="q5" value="option3">  // this is a comment</label>
@@ -60,7 +61,7 @@
                 </div>
             </form>
         </div>
-    </body>
+    </main>
     <footer>
 
     </footer>
