modified:   wwr/about.html 	modified:   wwr/contact.html 	new file:   wwr/styles/contact.css 	modified:   wwr/styles/rafting.css 	new file:   wwr/trash.html

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -27,7 +27,7 @@
         </nav>
     </header>
     <main>
-        <div class="hero">
+        <div class="hero part1">
             <img src="images/hero.jpg" alt="Hero">
             <h1>Rafting Travel</h1>
             <article>
