--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -27,7 +27,7 @@
         </nav>
     </header>
     <main>
-        <div class="hero">
+        <div class="hero part1">
             <img src="images/hero.jpg" alt="Hero">
             <h1>Rafting Travel</h1>
             <article>
@@ -40,25 +40,14 @@
                     <em>Rafting Travel adventure and joy your way!</em></p>
             </article>
         </div>
-        <section>
-            <div>
-                <h2 class="headgriditem">Contact Us</h2>
-                <p class="top commonsetting1">Call or send us a message</p>
-                <p class="phone commonsetting1" >Phone number: +55 21 991919999</p>
-                <p class="email commonsetting1">Email: contact@raftingtravel.com</p>
-                <p class="address">Address: President Vargas Street, 1000, Rio de Janeiro, RJ, Brazil</p>                
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3675.326563457703!2d-43.18164652385474!3d-22.901322779258948!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x997f6b9ebdff0d%3A0xfddce16d156a199e!2sAv.%20Pres.%20Vargas%2C%20Rio%20de%20Janeiro%20-%20RJ!5e0!3m2!1sen!2sbr!4v1716554526277!5m2!1sen!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="mapitem"></iframe>
+        <div class="specialdiv">
+            <div class="headgriditem">
+                <h2>Reach Our Team!</h2>
+                <p>Contact us! We want to hear your comments, suggestions and concerns!</p>  
             </div>
-        </section>
-        <section class="formsection">
-            <form action="">
-                <fieldset>
-                    <legend>Send a Message</legend>
-                    <label for="username" class="formitems">Type your name:<input type="text" name="username" id="username"></label><br>
-                    <label for="useremail" class="formitems">Type your email:<input type="email" name="useremail" id="useremail"></label><br>
-                </fieldset>
-            </form>
-        </section>
+            
+           
+        </div>
         <section class ="rafting-images">
             <h2>Adventure Awaits You!</h2>
             <!-- 
