modified:   wwr/contact.html 	new file:   wwr/images/happyemployee1.jpg 	new file:   wwr/images/happyemployee2.jpg 	new file:   wwr/images/happyemployee3.jpg 	new file:   wwr/images/phoneicon.jpg 	modified:   wwr/styles/rafting.css

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -42,11 +42,56 @@
         </div>
         <div class="specialdiv">
             <div class="headgriditem">
-                <h2>Reach Our Team!</h2>
-                <p>Contact us! We want to hear your comments, suggestions and concerns!</p>  
+                <h2 class="c1">Reach Our Team!</h2>
+                <p class="c1">We want to hear your comments, suggestions and concerns!</p>  
             </div>
-            
-           
+            <div class="phonemessage">
+                <h3 class="c1">Talk to Us!</h3>
+                <p class="c1">
+                    Talk to our team to find out more about our wonderful rafting circuits, for suggestions and complaints.
+                </p>
+                <div class="c1">
+                    <img src="images/phoneicon.jpg" alt="phoneicon">+55 21 991919199
+                </div>
+            </div>
+            <div class="emailcontact c1">
+                <h3 class="c1">Email Us!</h3>
+                <p class="c1">
+                    Talk to our team to find out more about our wonderful rafting circuits, for suggestions and complaints.
+                </p>
+                <p>
+                    Email:contact@rafting.com
+                </p>
+                <div>
+                    <a href="mailto:contact@rafting.com">
+                        <input class="emailbutton c1" type="button" value="Contact Email">
+                    </a>
+                </div>
+            </div>
+            <div class="adressmap alternativegrid c1">
+                <h2>Headquarters</h2>
+                <h3>Rio de Janeiro, Brazil</h3>
+                <p>Presidente Vargas 1000 Avenue Rio de Janeiro</p>
+                <p>+55 21 3233-0000</p>
+            </div>
+            <div class="map">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3675.326563457703!2d-43.18164652385474!3d-22.901322779258948!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x997f6b9ebdff0d%3A0xfddce16d156a199e!2sAv.%20Pres.%20Vargas%2C%20Rio%20de%20Janeiro%20-%20RJ!5e0!3m2!1sen!2sbr!4v1716554526277!5m2!1sen!2sbr" width="350" height="300"  allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+        </div>
+        <div class="employeegrid">
+            <h3>Meet our employees</h3>
+            <figure class="p1">
+                <img src="images/happyemployee1.jpg" alt="Happy employee Mary">
+                <figcaption>Joy to be part of this team (Mary)</figcaption>
+            </figure>
+            <figure class="p1">
+                <img src="images/happyemployee2.jpg" alt="Happy employee Jessica">
+                <figcaption>Sense of accomplishment (Jessica)</figcaption>
+            </figure>
+            <figure class="p1">
+                <img src="images/happyemployee3.jpg" alt="Happy employee Ana and John">
+                <figcaption>Our difference is enthusiasm (John) </figcaption>
+            </figure>
         </div>
         <section class ="rafting-images">
             <h2>Adventure Awaits You!</h2>
