modified:   wwr/contact.html

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -122,9 +122,7 @@
                 <div class="bcontainer">
                     <button type="submit">Submit</button>
                 </div>
-                
             </form>
-
         </div>
         <section class ="rafting-images">
             <h2>Adventure Awaits You!</h2>
@@ -161,6 +159,7 @@
                 </figure>  
             </div> 
         </section>
+        <a href="mockup/Contact_Us_Page_Wireframe.png">link to the Contact Us wireframe</a>
     </main>
     <footer class="base">
         <p class="paragraph-base">©2024 ⚓ Rafting Travel ⚓ Robson Paulo da Silva</p>
