--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -120,7 +120,7 @@
                     <label for="chk1"><input type="checkbox" name="chk1" id="chk1"> Please subscribe me to the monthly newsletter</label> 
                 </fieldset>
                 <div class="bcontainer">
-                    <button type="submit">Submit</button>
+                    <button type="submit">Send</button>
                 </div>
             </form>
         </div>
