modified:   wwr/contact.html 	modified:   wwr/styles/rafting.css

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -159,9 +159,9 @@
                 </figure>  
             </div> 
         </section>
-        <a href="mockup/Contact_Us_Page_Wireframe.png">link to the Contact Us wireframe</a>
     </main>
     <footer class="base">
+        <a href="mockup/Contact_Us_Page_Wireframe.png">Wireframe</a>
         <p class="paragraph-base">©2024 ⚓ Rafting Travel ⚓ Robson Paulo da Silva</p>
         <nav class="base-nav">
             <a href="https://facebook.com"><img src="images/facebook_icon.webp" alt="Facebook"></a>
