--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -4,8 +4,8 @@
     <!-- Including default tags -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rafting Travel Company Contact Us</title>
-    <meta name="description" content="Find our contact details here, leave us your opinions, suggestions and complaints!">
+    <title> Rafting Travel Company Contact Us</title>
+    <meta name="description" content="Contact Us. Find our contact details here, leave us your opinions, suggestions and complaints!">
     <meta name="author" content="Robson Paulo da Silva">
 
     <!-- Including Style Sheet -->
@@ -71,8 +71,8 @@
             <div class="adressmap alternativegrid c1">
                 <h2>Headquarters</h2>
                 <h3>Rio de Janeiro, Brazil</h3>
-                <p>Presidente Vargas 1000 Avenue Rio de Janeiro</p>
-                <p>+55 21 3233-0000</p>
+                <p>Adress: Presidente Vargas 1000 Avenue Rio de Janeiro</p>
+                <p>Phone: +55 21 3233-0000</p>
             </div>
             <div class="map">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3675.326563457703!2d-43.18164652385474!3d-22.901322779258948!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x997f6b9ebdff0d%3A0xfddce16d156a199e!2sAv.%20Pres.%20Vargas%2C%20Rio%20de%20Janeiro%20-%20RJ!5e0!3m2!1sen!2sbr!4v1716554526277!5m2!1sen!2sbr" width="350" height="300"  allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
