modified:   wwr/styles/rafting.css 	modified:   wwr/trips.html

--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -29,7 +29,17 @@
         </nav>
     </header>
     <main>
-        
+        <div class="specialdiv">
+            <div class = "firstelement">
+                <h2>Contact Us</h2>
+                <p>
+                    We are excited to chat with you! <a href="contact.html">Click here</a> to talk to us!
+                </p>
+            </div>
+            <div class="secondelement">Segundo elemento</div>
+            <div class="thirdelement">Terceiro elemento</div>
+            
+        </div>
     </main>
     <footer class="base">
         <p class="paragraph-base">©2024 ⚓ Rafting Travel ⚓ Robson Paulo da Silva</p>
