--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -31,9 +31,12 @@
     <main>
         <div class="specialdiv">
             <div class = "firstelement">
-                <h2>Contact Us</h2>
                 <p>
-                    We are excited to chat with you! <a href="contact.html">Click here</a> to talk to us!
+                    We offer a quality service, with the best equipment and specialized and experienced staff.
+                    Come, make your reservation! Call 080021213456 or, if you prefer, click the button below to see other ways to contact us.
+                </p>
+                <p>
+                   <a href="contact.html">Book Now</a>
                 </p>
             </div>
             <div class="secondelement">Segundo elemento</div>
