--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -17,13 +17,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand+SC&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
+    <header class="theader">
         <img src="images/logo.jpg" alt="Rafting Travel Company Logo">
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="trips.html">Trips</a>
-            <a href="contact.html">Contact</a>
+        <nav class="comp_nav">
+            <a href="index.html" class="comp_nav_a">Home</a>
+            <a href="about.html" class="comp_nav_a">About</a>
+            <a href="trips.html" class="comp_nav_a">Trips</a>
+            <a href="contact.html" class="comp_nav_a">Contact</a>
         </nav>
     </header>
     <main>
