--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -19,20 +19,20 @@
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand+SC&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
+    <header class="theader">
         <img src="images/logo.jpg" alt="Rafting Travel Company Logo">
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="trips.html">Trips</a>
-            <a href="contact.html">Contact</a>
+        <nav class="comp_nav">
+            <a href="index.html" class="comp_nav_a">Home</a>
+            <a href="about.html" class="comp_nav_a">About</a>
+            <a href="trips.html" class="comp_nav_a">Trips</a>
+            <a href="contact.html" class="comp_nav_a">Contact</a>
         </nav>
     </header>
     <main>
         <div class="specialdiv">
             <div class = "firstelement">
                 <p>
-                    We offer a quality service, with the best equipment and specialized and experienced staff.
+                    We offer a quality service, with the best equipment, specialized and experienced staff.
                     Come, make your reservation! Call 080021213456 or, if you prefer, click the button below to see other ways to contact us.
                 </p>
                 <p>
