modified:   wwr/contact.html 	modified:   wwr/styles/rafting.css

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -54,7 +54,7 @@
                     <img src="images/phoneicon.jpg" alt="phoneicon">+55 21 991919199
                 </div>
             </div>
-            <div class="emailcontact c1">
+            <div class="emailcontact">
                 <h3 class="c1">Email Us!</h3>
                 <p class="c1">
                     Talk to our team to find out more about our wonderful rafting circuits, for suggestions and complaints.
@@ -62,7 +62,7 @@
                 <p>
                     Email:contact@rafting.com
                 </p>
-                <form action="mailto:contact@rafting.com">
+                <form action="mailto:contact@rafting.com" class=" c1">
                     <button>
                         Contact Email
                     </button>
@@ -94,7 +94,7 @@
             </figure>
         </div>
         <div class = "fclient">
-            <h3 class="f1">Send Us a Message</h3>
+            <h3>Send Us a Message</h3>
             <form class="contactus"> 
                 <label for="fullname">Full name</label>
                 <input type="text" id="fullname" name="fullname" placeholder="Full name">
@@ -119,7 +119,7 @@
 
                     <label for="chk1"><input type="checkbox" name="chk1" id="chk1"> Please subscribe me to the monthly newsletter</label> 
                 </fieldset>
-                <div class="bcontainer">
+                <div class="c1">
                     <button type="submit">Send</button>
                 </div>
             </form>
