modified:   wwr/styles/rafting.css 	modified:   wwr/trips.html

--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -35,8 +35,8 @@
                     We offer a quality service, with the best equipment, specialized and experienced staff.
                     Come, make your reservation! Call 080021213456 or, if you prefer, click the button below to see other ways to contact us.
                 </p>
-                <p>
-                   <a href="contact.html">Book Now</a>
+                <p class="comp_nav c1">
+                   <a href="contact.html" class="comp_nav_a">Book Now</a>
                 </p>
             </div>
             <div class="secondelement">Segundo elemento</div>
