modified:   wwr/styles/rafting.css 	modified:   wwr/trips.html

--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -29,20 +29,16 @@
         </nav>
     </header>
     <main>
-        <div class="specialdiv">
-            <div class = "firstelement">
+        <div class="firstelement">
+            <div class="box">
                 <p>
                     We offer a quality service, with the best equipment, specialized and experienced staff.
                     Come, make your reservation! Call 080021213456 or, if you prefer, click the button below to see other ways to contact us.
                 </p>
-                <p class="comp_nav c1">
-                   <a href="contact.html" class="comp_nav_a">Book Now</a>
-                </p>
             </div>
-            <div class="secondelement">Segundo elemento</div>
-            <div class="thirdelement">Terceiro elemento</div>
-            
+            <a href="contact.html" class="">Book Now</a>
         </div>
+         
     </main>
     <footer class="base">
         <p class="paragraph-base">©2024 ⚓ Rafting Travel ⚓ Robson Paulo da Silva</p>
