--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -162,7 +162,7 @@
     </main>
     <footer class="base">
         <a href="mockup/Contact_Us_Page_Wireframe.png">Wireframe</a>
-        <p class="paragraph-base">©2024 ⚓ Rafting Travel ⚓ Robson Paulo da Silva</p>
+        <p class="paragraph-base1">©2024 ⚓ Rafting Travel ⚓ Robson Paulo da Silva</p>
         <nav class="base-nav">
             <a href="https://facebook.com"><img src="images/facebook_icon.webp" alt="Facebook"></a>
             <a href="htpps://twitter.com"><img src="images/twitter_icon.webp" alt="Twitter"></a>
